# telegram-bot-template

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: codeql.yml
migrations/: _get_next_revision_id.py  env.py
migrations/versions/: 001_create_table.py  878869ed09d4_create_table.py
telegram_bot/: .env.example  __main__.py  config.py  exceptions.py  runners.py
telegram_bot/enums/: __init__.py  locale.py
telegram_bot/factories/: __init__.py  bot.py  config.py  dispatcher.py
telegram_bot/handlers/common/: __init__.py  start.py
telegram_bot/handlers/extra/: __init__.py  errors.py
telegram_bot/keyboards/reply/: menu.py
telegram_bot/locales/en/: buttons.ftl  messages.ftl
telegram_bot/locales/ru/: buttons.ftl  messages.ftl
telegram_bot/locales/uk/: buttons.ftl  messages.ftl
telegram_bot/middlewares/: __init__.py
telegram_bot/middlewares/outer/: __init__.py  database.py  i18n.py  user.py
telegram_bot/services/database/: __init__.py  context.py  create_pool.py  uow.py
telegram_bot/services/database/models/: __init__.py  base.py  user.py
telegram_bot/services/database/repositories/: __init__.py  base.py  general.py  users.py
telegram_bot/utils/loggers/: multiline.py
