[tool.poetry]
name = "telegram-bot-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
aiogram-i18n = "^1.3.4"
fluent-runtime = "^0.4.0"
redis = "^5.0.3"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.357"
ruff = "^0.3.5"
mypy = "^1.9.0"
libcst = "^1.3.1"

[tool.ruff]
exclude = [
  "migrations",
]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101",
  "ANN102", 
  "ANN401",
  "BLE001",
  "D",
  "EXE002",
]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy"
]
exclude = [
    "migrations",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
